--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>When the imposter is sus!</title>
-<meta property="og:title" content="When the imposter is sus!" />
-<meta property="og:image" content="5826E680-D019-4E65-8FC1-51C0E734D6A3.jpeg" />
+<title>When the imposter is sus!&#128563;</title>
+<meta property="og:title" content="When the imposter is sus!&#128563;" />
+<meta property="og:image" content="http://whentheimposterissus.xyz/5826E680-D019-4E65-8FC1-51C0E734D6A3.jpeg" />
 <meta property="twitter:card" content="summary_large_image" />
 <meta name="keywords" content="sus, imposter, among us"
 </head>
