--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+body, html {
+  height: 100%;
+}
+
+.bg { 
+  background-image: url("5826E680-D019-4E65-8FC1-51C0E734D6A3.jpeg");
+
+  height: 100%; 
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
 <title>When the imposter is sus!&#128563;</title>
 <meta property="og:title" content="When the imposter is sus!&#128563;" />
 <meta property="og:image" content="http://whentheimposterissus.xyz/5826E680-D019-4E65-8FC1-51C0E734D6A3.jpeg" />
@@ -8,6 +23,6 @@
 <meta name="keywords" content="sus, imposter, among us"
 </head>
 <body>
-<img src="5826E680-D019-4E65-8FC1-51C0E734D6A3.jpeg" />
+<div class="bg"></div>
 </body>
 </html>
