--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@ body, html {
 </head>
 <body>
 <div class="bg"></div>
+<audio controls="" preload="" loop=""> <source src="konga.92cb31af.mp3" type="audio/mp3"> <embed src="konga.92cb31af.mp3" loop=""> </audio>
 </body>
 </html>
