--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ body, html {
 </head>
 <body>
 <div class="bg"></div>
-<audio controls="" preload="" loop=""> <source src="video-playback2.mp3" type="audio/mp3"> <embed src="video-playback2.mp3" loop=""> </audio>
+<audio controls="" preload="" loop=""> 
+  <source src="video-playback2.mp3" type="audio/mp3"> 
+  <embed src="video-playback2.mp3" loop=""> 
+</audio>
 </body>
 </html>
