--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ body, html {
 <body>
 <div class="bg"></div>
 <audio controls="" preload="" loop=""> 
-  <source src="video-playback2.mp3" type="audio/mp3"> 
-  <embed src="video-playback2.mp3" loop=""> 
+  <source src="http://whentheimposterissus.xyz/video-playback2.mp3" type="audio/mp3"> 
+  <embed src="http://whentheimposterissus.xyz/video-playback2.mp3" loop=""> 
 </audio>
 </body>
 </html>
