--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body, html {
 </head>
 <body>
 <div class="bg"></div>
-<audio controls="" preload="" loop=""> 
+<audio autoplay="" preload="" loop=""> 
   <source src="http://whentheimposterissus.xyz/video-playback2.mp3" type="audio/mp3"> 
   <embed src="http://whentheimposterissus.xyz/video-playback2.mp3" loop=""> 
 </audio>
